<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house_color"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/categories" />
<!--        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <item android:title="@string/more_info">
        <menu>

            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />

            <item
                android:id="@+id/nav_night_mode"
                android:icon="@drawable/night_mode"
                android:title="@string/night_mode" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_app"
                android:title="@string/give_a_star" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info"
                android:title="@string/about_app" />
        </menu>
    </item>

</menu>
