<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/settings_desc"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_size" />

            <TextView
                android:id="@+id/text_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="end"
                android:text="@string/medium"
                android:textStyle="bold" />

        </LinearLayout>

        <Switch
            android:id="@+id/SwitchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/auto_night_mode" />

        <Switch
            android:id="@+id/SwitchPush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/receive_push_notifications" />

<!--        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:text="@string/settings_info"
            android:textColor="#c1c1c1"
            android:textStyle="italic" />
        -->

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/settings_close"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/colorAccent"
        app:lottie_fileName="settings_close.json"
        app:lottie_loop="false" />

</LinearLayout>