<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ActivitySignUp">


    <ImageView
        android:layout_weight=".6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_icon_only" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight=".4"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:textColorHint="@android:color/white"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:textColorHint="@android:color/white"
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:textColorHint="@android:color/white"
                android:id="@+id/reg_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:imeOptions="actionDone"
                android:hint="@string/reg_confirm_pass_text"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/reg_btn_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/reg_login_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/reg_login_text"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>
<!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Forgot password? Reset now!"
                android:textColor="@android:color/white" />-->

        </LinearLayout>


    </ScrollView>

</LinearLayout>