<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="110dp">

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/blog_thumbnail"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder_post" />

            <ImageView
                android:id="@+id/blog_video_play"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:src="@drawable/video_icon"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <ImageButton
                android:id="@+id/blog_delete_post"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_delete_forever_black_24dp"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title_is_loading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blog_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/sample_desc" />

            <RelativeLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/blog_category"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/style_home_cat"
                    android:gravity="end"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/loading_category"
                    android:textColor="@android:color/white" />


                <!-- Post Date -->
                <TextView
                    android:id="@+id/blog_date"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"
                    android:gravity="start"
                    android:text="@string/loading_date"
                    android:textStyle="normal" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>