<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <!-- Background Image-->
            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/blog_thumbnail"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder_post" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gradient_list_image" />

            <ImageView
                android:id="@+id/blog_video_play"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/video_icon"
                android:visibility="gone" />

            <!-- Delete Post -->
            <ImageButton
                android:id="@+id/blog_delete_post"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:background="@drawable/bg_shadow"
                android:padding="10dp"
                android:src="@drawable/ic_delete_forever_black_24dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/blog_date"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/blog_title"
                android:layout_margin="5dp"
                android:gravity="start"
                android:shadowColor="#393939"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loading_date"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="6dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/title_is_loading"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <!-- Post Category -->
            <TextView
                android:id="@+id/blog_category"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:background="@drawable/style_home_cat"
                android:gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/loading_category"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/blog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/sample_desc"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.CardView>